[gd_scene load_steps=4 format=3 uid="uid://etrxo5blcxp8"]

[ext_resource type="Script" path="res://scenes/mob_bullet.gd" id="1_6ayg7"]
[ext_resource type="Texture2D" uid="uid://ba4bhw0qs0ny2" path="res://assets/bulet_3.png" id="2_055w2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nfwac"]
radius = 6.0
height = 16.0

[node name="MobBullet" type="Area2D"]
modulate = Color(0.927576, 1, 0.726427, 1)
z_index = 9
scale = Vector2(0.5, 0.5)
script = ExtResource("1_6ayg7")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.269588, 0.518636, 0.828376, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_055w2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nfwac")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.86102e-07, 2.38419e-07)
scale = Vector2(0.2, 0.4)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
